--- a/Source/Core/DolphinWX/Dolphin.vcxproj.filters
+++ b/Source/Core/DolphinWX/Dolphin.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Src\MainNoGUI.cpp" />
     <ClCompile Include="Src\stdafx.cpp" />
     <ClCompile Include="Src\WXInputBase.cpp" />
     <ClCompile Include="Src\WxUtils.cpp" />
@@ -140,6 +139,7 @@
     <ClCompile Include="Src\Main.cpp" />
     <ClCompile Include="Src\getopt.c" />
     <ClCompile Include="Src\getopt1.c" />
+    <ClCompile Include="Src\MainCLI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Main.h" />
